--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -79,7 +79,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown" style="border: 1px solid #eceeef;">
                        <a class="dropdown-item" href="{{ site.baseurl }}/python">Python IDE</a>
-                       <a class="dropdown-item" href="https://ide.irvinecoding.club">Collaborative IDE</a>
+                       <a class="dropdown-item" href="https://ide.forrest-zeng.github.io/Forrest-Zeng-ASB">Collaborative IDE</a>
                     </div>
                 </li>
 
