--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,14 +3,14 @@
   <div class="sidebar-section">
         <h5><span>A PVSA Certifying Org</span></h5>
          <center><a href="/volunteer">
-       <img src="https://irvinecoding.club/assets/images/pvsa-logo.png" alt="PVSA" /></a></center>
+       <img src="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/pvsa-logo.png" alt="PVSA" /></a></center>
    </div>
 
  
 
         <div class="sidebar-section">
               <h5><span>Member Sign Up</span></h5>
-            <a href="/join" title="Member Sign Up"><img src="https://irvinecoding.club/assets/images/iccposter.jpg" onerror="this.style.display='none'" />
+            <a href="/join" title="Member Sign Up"><img src="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/iccposter.jpg" onerror="this.style.display='none'" />
               Sign up as a member or volunteer!
             </a>
          </div>
@@ -21,13 +21,13 @@
                      <h5><span>FOLLOW US</span></h5>
                      <div id="sidebarcont">
                        <a href="https://instagram.com/irvinecodingclub">
-                          <img class="discord sidebaricons" src="https://irvinecoding.club/assets/images/instagram.png">
+                          <img class="discord sidebaricons" src="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/instagram.png">
                        </a>
                        <a href="https://www.facebook.com/irvinecodingclub">
-                          <img class="discord sidebaricons" src="https://irvinecoding.club/assets/images/facebook.png" style="background-color:#1877f2">
+                          <img class="discord sidebaricons" src="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/facebook.png" style="background-color:#1877f2">
                        </a>
                        <a href="https://www.youtube.com/channel/UCqN97rf-M3vnJq5g1IMZx4Q">
-                         <img class="discord sidebaricons" src="https://irvinecoding.club/assets/images/youtube.png">
+                         <img class="discord sidebaricons" src="https://forrest-zeng.github.io/Forrest-Zeng-ASB/assets/images/youtube.png">
                        </a>
                      </div>
                   </div>
