cleaned files and changed banner

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -392,7 +392,7 @@ span.post-read-more a:hover {
 }
 
 .intro {
-	background-image: url(/assets/images/head.jpg);
+	background-image: url(/assets/images/rickroll.gif);
 	background-repeat: no-repeat;
 	background-size: contain;
   background-position: center;
