--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -392,7 +392,7 @@ span.post-read-more a:hover {
 }
 
 .intro {
-	background-image: url(/assets/images/rickroll.gif);
+	background-image: url(https://c.tenor.com/u9XnPveDa9AAAAAM/rick-rickroll.gif?);
 	background-repeat: no-repeat;
 	background-size: contain;
   background-position: center;
